--- a/src/components/Filter.scss
+++ b/src/components/Filter.scss
@@ -5,10 +5,10 @@
   width: calc(100% - 10px);
 
   &__label {
+    align-items: center;
     display: flex;
     font-size: 24px;
     grid-column: 1 / 2;
-    justify-content: center;
   }
 
   &__input {
