--- a/src/components/Filter.scss
+++ b/src/components/Filter.scss
@@ -1,22 +1,31 @@
 .form-filter {
-  display: grid;
-  grid-template-columns: min-content auto;
-  grid-gap: 10px;
-  width: calc(100%);
+  display: block;
+  width: 100%;
   max-width: 1110px;
 
-  &__label {
-    align-items: center;
-    display: flex;
-    font-size: 24px;
-    grid-column: 1 / 2;
-    cursor: pointer;
-  }
+  &__event {
+    &-text,
+    &-type {
+      display: grid;
+      grid-template-columns: min-content auto;
+      grid-gap: 10px;
+      width: 100%;
 
-  &__input {
-    border: 1px solid #999;
-    font-size: 24px;
-    grid-column: 2 / 5;
-    width: auto;
+      &__label {
+        align-items: center;
+        display: flex;
+        font-size: 24px;
+        grid-column: 1 / 2;
+        cursor: pointer;
+      }
+
+      &__input,
+      &__select {
+        border: 1px solid #999;
+        font-size: 24px;
+        grid-column: 2 / 5;
+        width: auto;
+      }
+    }
   }
 }
