Add moment.js, remove Grandma W and Ryan H

--- a/src/components/CountdownCard.scss
+++ b/src/components/CountdownCard.scss
@@ -2,9 +2,10 @@
   background: none;
   border-radius: 10px;
   color: black;
+  cursor: pointer;
   display: grid;
   grid-template-columns: [col] 175px [col] auto;
-  grid-template-rows: repeat(3, [row] auto);
+  grid-template-rows: repeat(5, [row] auto);
   margin-top: 5px;
   min-width: 375px;
   max-width: 1100px;
@@ -103,5 +104,21 @@
     grid-column: col 2 / span 1;
     grid-row: row 3;
     text-align: left;
+  }
+
+  &__extra {
+    color: $color-white;
+    height: 0;
+    grid-column: col 2 / span 1;
+    grid-row: row 4;
+    opacity: 0;
+    text-align: left;
+    transition: height 0.5s 0s ease-in-out, opacity 0.5s ease-in-out;
+
+    &-show {
+      display: block;
+      height: 100%;
+      opacity: 1;
+    }
   }
 }
